--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -125,3 +125,10 @@ body {
     }
   }
 }
+
+.heading-box {
+  @include borderBtm;
+  margin: 3rem auto;
+  width: 50%;
+  padding: 0;
+}
