--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.u-brdr-none {
+  border: none;
+}
+
 .u-mr-btm-sm {
   margin-bottom: 1.5rem;
 }
